<resources>
    <string name="app_name">CourseRegistration</string>
    <string name="lewislogo">lewisLogo</string>
    <string name="view_classes_button">View Classes</string>
    <string name="register_for_classes_button">Register for Classes</string>
    <string name="drop_classes_button">Drop Classes</string>
    <string name="view_schedule_button">View Schedule</string>
    <string name="drop_class_header">Drop Class</string>
    <string name="view_schedule_header">View Schedule</string>
    <string name="drop_classes_header">Drop Classes</string>
    <string name="view_classes_header">View Classes</string>
    <string name="register_for_class_header">Register for Classes</string>
    <string name="course_registration_header">Course Registration</string>
    <string name="course_name">course name</string>
    <string name="course_number">Course Number</string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="credit_hours">Credit Hours</string>


    <string-array name="courseName">
        <item>Applied Calculus</item>
        <item>Linear Algebra</item>
        <item>Discrete Mathematics</item>
        <item>Applied Probability and Statistics</item>
        <item>Introduction to Computer Science</item>
        <item>Programming Fundamentals</item>
        <item>Object-Oriented Programming</item>
        <item>Introduction to Networks</item>
        <item>Computer Organization</item>
        <item>Algorithms and Data Structures</item>
        <item>Operating Systems</item>
        <item>Computer Security</item>
        <item>Software Engineering</item>
        <item>Programming Languages</item>
        <item>Theory of Algorithms and Computation</item>
        <item>Software Systems Capstone Project</item>
        <item>Scientific Computing</item>
        <item>Applied Programming Languages</item>
        <item>Artificial Intelligence</item>
        <item>Video Game Programming 1</item>
        <item>Viedo Game Programming 2</item>
        <item>Computer Graphics Programming</item>
        <item>.NET Programming</item>
        <item>Web and Distributed Programming</item>
        <item>Database Systems</item>
        <item>Mobile Application Development</item>
        <item>Encryption</item>
        <item>Programming for Penetration Testing</item>
        <item>Programming for Digital Forensics</item>
        <item>Introduction to Unix</item>
        <item>Cloud Computing and Virtualization</item>
        <item>Client-Server Computing</item>
    </string-array>

    <string-array name="courseNumber">
        <item>24000</item>
        <item>30500</item>
        <item>31000</item>
        <item>31400</item>
        <item>20000</item>
        <item>21000</item>
        <item>24500</item>
        <item>28100</item>
        <item>30000</item>
        <item>34000</item>
        <item>35000</item>
        <item>42000</item>
        <item>44000</item>
        <item>46000</item>
        <item>46500</item>
        <item>49200</item>
        <item>31500</item>
        <item>36000</item>
        <item>47000</item>
        <item>41000</item>
        <item>41500</item>
        <item>43000</item>
        <item>23000</item>
        <item>24700</item>
        <item>33000</item>
        <item>41700</item>
        <item>42500</item>
        <item>42700</item>
        <item>42800</item>
        <item>22000</item>
        <item>35500</item>
    </string-array>

    <string-array name="creditHours">
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="professor">
        <item>Natalie Adams</item>
        <item>Eric Chou</item>
        <item>Dana Dominiak</item>
        <item>Napoleon Garcia</item>
        <item>Cindy Howard</item>
        <item>Sung Kim</item>
        <item>Greg Manning</item>
        <item>Lucien Ngalamou</item>
        <item>Safwan Omari</item>
        <item>Jason Perry</item>
        <item>Mathias Plass</item>
        <item>John Rinderer</item>
        <item>Miachel Smith</item>
        <item>Eric Spangler</item>
        <item>Kayla Stephenson</item>
        <item>Quinn Stratton</item>
        <item>Piotr Szczurek</item>
        <item>Thomas Szum</item>
    </string-array>
</resources>