<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="203dp"
        android:layout_height="206dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/lewislogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lewis_logo"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/view_classes_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/view_classes_button"
        android:textColor="@color/primaryTextColor"
        android:textColorLink="@color/secondaryDarkColor"
        app:backgroundTint="@color/primaryColor"
        app:iconTint="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="@color/secondaryColor"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/register_f0r_classes_button"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/register_for_classes_button"
        android:textColor="@color/primaryTextColor"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_classes_button"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/view_schedule_button"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/view_schedule_button"
        android:textColor="@color/primaryTextColor"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_classes_button"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/drop_classes_button"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/drop_classes_button"
        android:textColor="@color/primaryTextColor"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_f0r_classes_button"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>

